# halite

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  submission.py  tox.ini
app/: main.py
google_bigquery/datasets/halite_analytics/tables/: dim_game.json  dim_player.json  fact.json  leaderboard.json
google_bigquery/tf/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
halite/: constants.py  dtypes.py
halite/agents/: agent.py
halite/agents/depressed_agent/: __init__.py  agent.py
halite/agents/random_agent/: __init__.py  agent.py  board.py
halite/agents/rule_based_agent/: TODO.md  __init__.py  agent.py  board.py  navigate.py  search.py  spawn.py  strategy.py
halite/interpreter/: board.py  board_map.py  configuration.py  constants.py  exceptions.py  game.py  halite_interpreter.md  interpreter.py  player.py  state.py  state_new.py  unit.py
halite/utils/: __init__.py  mixins.py  processors.py  representation_mixin.py
notebooks/: fastapi_usage.py  google_cloud_storage_example.py  google_cloud_storage_test.py  halite_interpreter.py  how_to_run_agents.py  request_leaderboard_example.py
tests/: test_dummy.py
