[tool.poetry]
name = "halite"
version = "0.1.0"
description = "Our contribution to the Halite competition on Kaggle."
authors = [
    "Jan-Benedikt Jagusch <jan.jagusch@gmail.com>",
    "Haakon Robinson <haakon.robinson@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
kaggle-environments = "^0.2.0"
scipy = "^1.4.1"
gym = "^0.17.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
tox = "^3.14.5"
black = "^19.10b0"
pytest-cov = "^2.8.1"
kaggle = "^1.5.6"
codecov = "^2.0.22"
ipykernel = "^5.2.0"
stickytape = "^0.1.14"
requests = "^2.23.0"
pandas = "^1.0.3"
tqdm = "^4.45.0"
matplotlib = "^3.2.1"
structlog = "^20.1.0"
pyyaml = "^5.3.1"
dataclasses-json = "^0.4.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
