[tool.poetry]
name = "halite"
version = "0.1.0"
description = "Our submission to the Halite competition on Kaggle."
authors = [
    "Jan-Benedikt Jagusch <jan.jagusch@gmail.com>",
    "Haakon Robinson <haakon.robinson@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
kaggle-environments = "^0.2.0"
scipy = "^1.4.1"
gym = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
codecov = "^2.0.22"
ipykernel = "^5.2.0"
kaggle = "^1.5.6"
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
stickytape = "^0.1.14"
tox = "^3.14.5"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
