[tool.poetry]
name = "halite-agent"
version = "0.1.0"
description = "Our submission to the Halite competition on Kaggle."
authors = [
    "Jan-Benedikt Jagusch <jan.jagusch@gmail.com>",
    "Haakon Robinson <haakon.robinson@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kaggle-environments = "^1.2.4"
requests = "^2.24.0"
fastapi = "^0.54.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
codecov = "^2.1.7"
ipykernel = "^5.3.3"
kaggle = "^1.5.6"
pylint = "^2.5.2"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
stickytape = "^0.1.14"
tox = "^3.14.5"
uvicorn = "^0.11.5"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
